--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,7 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     line-height: 1.7;
-    background-color: #E8ECD7;
-    margin: 0px;
+    background-color: #ffffff;
 }
 a {
     text-decoration: none;
@@ -27,7 +26,7 @@ li {
     font-size: 1.2rem;
 }
 main {
-    margin: 1rem;
+    padding: 1rem 2rem;
 }
 form {
     display: flex;
@@ -36,23 +35,32 @@ form {
 }
 input {
     width: 100%;
-    border: 2px solid #1F4529;
-    border-radius: 10px;
+    border: 1px solid #1F4529;
+    border-radius: 5px;
     padding: .5rem .8rem;
 }
 textarea {
     width: 100%;
-    border: 2px solid #1F4529;
+    border: 1px solid #1F4529;
     border-radius: 10px;
     padding: .5rem .8rem;
     height: 150px;
 }
+label {
+    border-radius: 10px;
+    padding: .8rem 1rem;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+}
 
 /* home */
+.home-page {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 .search-box {
     display: flex;
-    gap: .8rem;
-    margin: 1rem 0 2rem 0;
+    gap: .5rem;
 }
 .search-select {
     background-color: #1F4529;
@@ -60,6 +68,7 @@ textarea {
     color: #E8ECD7;
     text-align: center;
     padding: .5rem;
+    font-size: .8rem;
 }
 .recipe-list {
     display: grid;
@@ -68,10 +77,9 @@ textarea {
     list-style: none;
 }
 .recipe {
-    border: 3px solid #1F4529;
     border-radius: 10px;
-    padding: 1rem;
-    border-radius: 10px;
+    padding: .8rem 1rem;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 .recipe-list .recipe-image {
     width: 100%;
@@ -79,13 +87,8 @@ textarea {
     object-fit: cover;
 }
 .recipe-title {
+    font-size: .8rem;
     font-weight: bold;
-}
-.recipe-list .ingredients-list {
-    list-style: none;
-    font-size: .5rem;
-    display: flex;
-    flex-wrap: wrap
 }
 .btn {
     display: block;
@@ -97,14 +100,20 @@ textarea {
     height: 30px;
     fill: #1F4529;
 }
-
+.logout-btn {
+    background-color: #1F4529;
+    border-radius: 10px;
+    font-size: .8rem;
+    padding: .5rem 1.5rem;
+    color: #ffffff;
+    display: block;
+    margin: 0 auto;
+}
 /* add page */
 .add-page {
     display: flex;
     flex-direction: column;
-    background-color: #E8ECD7;
     border-radius: 10px;
-    padding: 1.2rem 1.5rem;
 }
 .cancel-btn {
     width: 30px;
@@ -151,13 +160,9 @@ textarea {
 
 /* recipe page */
 .recipe-page {
-    background-color: #E8ECD7;
-    border: 10px;
-    padding: 1.5rem 2rem;
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 .recipe-page .recipe-title {
     font-size: 1.5rem;
@@ -166,6 +171,11 @@ textarea {
     width: 100%;
     aspect-ratio: 16/9;
     object-fit: cover;
+}
+.ingredients-list, .step-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 .recipe-page ul,.recipe-page ol {
     font-size: .8rem;
@@ -183,6 +193,7 @@ textarea {
     display: block;
     margin: 1rem auto;
 }
+
 /* Edit recipes page */
 .add-page > button {
     display: block;
@@ -193,12 +204,12 @@ textarea {
     width: 20px;
     height: 20px;
 }
+
 /* header */
 header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: .5rem;
 }
 .logo {
     width: 100px;
